# knowledge-graph-chainlit

./: README.md  chainlit-1.0.0rc3-py3-none-any.whl  prompts_chainlit.toml  pyproject.toml
.chainlit/: config.toml
knowledge_graph_chainlit/configuration/: config.py  model.py  tagging_service.py  toml_support.py
knowledge_graph_chainlit/frontend/: main.py
